--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -20,6 +20,24 @@
     }
   }
 }
+
+.chat-condition-item-container {
+  position: absolute;
+  background: inherit;
+  bottom: 0px;
+  padding: 5px;
+  border-radius: 6px;
+}
+.chat-condition-item {
+  background: none !important;
+  border: none;
+  margin-top: -20px !important;
+  padding: 0 !important;
+  font-family: var(--react-autoql-font-family);
+  color: var(--react-autoql-accent-color);
+  text-decoration: underline;
+  cursor: pointer;
+}
 .chat-single-message-container.response {
   display: flex;
   justify-content: flex-start;
