fix: data alerts initialization and csv download prop
fixed bug for data alerts initialization and added a prop to add or remove csv download option.

ac-1497 & ant-1351

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -334,6 +334,7 @@
 .react-autoql-drawer-tooltip {
   font-family: var(--react-autoql-font-family), sans-serif;
   letter-spacing: 0.04em;
+  line-height: 0.9em;
   padding: 7px 15px;
   transition: none;
   opacity: 1 !important;
