feat: session locking and UI refactor
AC-1480 and AC-1409

--- a/src/components/ConditionLockMenu/ConditionLockMenu.scss
+++ b/src/components/ConditionLockMenu/ConditionLockMenu.scss
@@ -18,6 +18,10 @@
   color: #5d5d5d;
 }
 
+.react-autoql-condition-locking-input:hover {
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
 .condition-table {
   min-width: 95%;
   margin: 10px auto;
