--- a/src/components/ConditionLockMenu/ConditionLockMenu.scss
+++ b/src/components/ConditionLockMenu/ConditionLockMenu.scss
@@ -18,6 +18,10 @@
   color: #5d5d5d;
 }
 
+.react-autoql-condition-locking-input:hover {
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
 .condition-table {
   min-width: 95%;
   margin: 10px auto;
@@ -170,4 +174,38 @@
   padding: 10px 0 0 10px;
   font-size: 12px;
   color: #777;
+}
+
+#condition-selection-error {
+  visibility: hidden;
+  min-width: 200px;
+  line-height: 1 !important;
+  font-size: 14px !important;
+  background-color: var(--react-autoql-background-color-secondary);
+  color: var(--react-autoql-error-color);
+  text-align: center;
+  border-radius: 4px;
+  padding: 6px;
+  position: fixed;
+  display: block;
+  z-index: 999999999;
+  transform: translateX(50%);
+  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.4);
+}
+
+#condition-selection-error.show {
+  visibility: visible;
+  // -webkit-animation: snackbarFadein 0.5s, snackbarFadeout 0.5s 2.5s;
+  animation: snackbarFadein 0.5s, snackbarFadeout 0.5s 2s;
+}
+
+@keyframes snackbarFadein {
+  from {
+    top: 30px;
+    opacity: 0;
+  }
+  to {
+    top: 60px;
+    opacity: 1;
+  }
 }
