--- a/src/components/QueryInput/QueryInput.scss
+++ b/src/components/QueryInput/QueryInput.scss
@@ -9,6 +9,8 @@
   padding-left: 20px;
   margin: 10px;
   height: 42px;
+  width: calc(100% - 20px);
+  white-space: nowrap;
   box-sizing: border-box;
   border-radius: 24px;
   font-size: 16px;
