--- a/src/components/QueryInputWithValidation/QueryInputWithValidation.scss
+++ b/src/components/QueryInputWithValidation/QueryInputWithValidation.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   font-size: 16px;
   font-family: inherit;
-  background: transparent;
+  background: var(--react-autoql-background-color-primary);
   letter-spacing: 0.05em;
   line-height: 20px;
   white-space: nowrap;
