--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -101,7 +101,7 @@
 .react-autoql-drawer .chat-bar-container {
   position: relative;
   padding: 10px;
-  padding-top: 30px;
+  // padding-top: 30px;
 }
 
 .react-autoql-drawer .chat-drawer-chat-bar {
