--- a/src/components/ConditionLockMenu/ConditionLockMenu.scss
+++ b/src/components/ConditionLockMenu/ConditionLockMenu.scss
@@ -1,3 +1,42 @@
+.react-autoql-filter-locking-title-container {
+  display: inline-block;
+  width: 100%;
+  padding-top: 4px;
+  padding-left: 6px;
+  h3 {
+    width: 95%;
+    float: left;
+    color: var(--react-autoql-text-color-primary);
+    margin-bottom: 0;
+  }
+  button {
+    width: 5%;
+    float: right;
+    :hover {
+      cursor: pointer;
+      color: var(--react-autoql-hover-color);
+    }
+  }
+}
+
+.react-autoql-filter-locking-empty-list {
+  color: var(--react-autoql-text-color-primary);
+  background-color: var(--react-autoql-background-color-secondary);
+  border-radius: 5px;
+  padding: 2px 6px 2px 6px;
+  margin: 2px 6px 2px 6px;
+  display: inline-block;
+
+  span {
+    color: var(--react-autoql-accent-color);
+  }
+  p {
+    width: 96%;
+    float: right;
+    margin-bottom: 0;
+  }
+}
+
 .react-autoql-condition-locking-input {
   padding: 5px;
   padding-left: 20px;
@@ -9,7 +48,7 @@
   font-family: inherit;
   letter-spacing: 0.04em;
   outline: none !important;
-  width: calc(100% - 60px);
+  width: calc(100% - 20px);
   font-family: inherit;
 
   /* Default styles outside of data messenger */
@@ -36,6 +75,13 @@
   padding: 4px;
   margin: 0 10px 0 10px;
   font-weight: 800;
+}
+
+.react-autoql-condition-lock-menu-footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 4px;
 }
 
 .react-autoql-accept-conditions-button {
@@ -71,6 +117,7 @@
 .condition-list {
   padding: 0;
   margin: 0 auto;
+  overflow-y: scroll;
 }
 .condition-list-item {
   cursor: pointer;
@@ -116,7 +163,7 @@
 .autoql-condition-locking-menu-container
   .react-autosuggest__suggestions-container--open {
   position: absolute;
-  // bottom: unset;
+  bottom: unset;
   overflow-y: scroll !important;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -128,12 +175,16 @@
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
   text-align: left;
   width: 95%;
-  top: 35px;
+  top: 60px;
   border-radius: 4px;
   margin: 10px auto;
   height: auto;
-  max-height: 50vh;
+  max-height: 80vh;
   overflow-y: auto;
+}
+
+.autoql-condition-locking-menu-list-item {
+  flex: 1 0 45em;
 }
 
 .autoql-condition-locking-menu-container
