feat: filter locking
allow users to lock filterable conditions for a better user experience

--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -86,6 +86,7 @@
 }
 .chat-single-message-container.response .chat-message-bubble:not(.text) {
   min-width: 125px;
+  padding-bottom: 15px;
 }
 .chat-single-message-container.request .chat-message-bubble {
   background: var(--react-autoql-accent-color);
