--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -306,5 +306,5 @@
   background-color: var(--react-autoql-background-color-secondary);
   border-radius: 5px;
   padding: 2px 6px 2px 6px;
-  margin: 2px 10px 1px 4px;
+  margin: 2px;
 }
