--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -303,4 +303,8 @@
 
 .condition-lock-reverse-translation {
   color: var(--react-autoql-text-color-primary);
+  background-color: var(--react-autoql-background-color-secondary);
+  border-radius: 5px;
+  padding: 2px 6px 2px 6px;
+  margin: 2px;
 }
