--- a/src/components/ConditionLockMenu/ConditionLockMenu.scss
+++ b/src/components/ConditionLockMenu/ConditionLockMenu.scss
@@ -208,6 +208,7 @@
   border: 1px solid var(--react-autoql-border-color);
   color: var(--react-autoql-text-color-primary);
   position: absolute;
+  top: unset;
   bottom: unset;
   overflow-y: scroll !important;
   padding-top: 5px;
@@ -219,12 +220,11 @@
   z-index: 2;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
   text-align: left;
-  top: 60px;
   border-radius: 4px;
-  margin: 10px auto;
+  margin: -8px auto;
   height: auto;
   max-height: 80vh;
-  overflow-y: auto;
+  overflow-y: scroll !important;
   transform: translateX(4%);
   width: 92% !important;
 }
@@ -288,36 +288,51 @@
   }
 }
 
-#condition-selection-error {
+#react-autoql-condition-show-message {
   visibility: hidden;
   min-width: 200px;
   line-height: 1 !important;
   font-size: 14px !important;
   background-color: var(--react-autoql-background-color-secondary);
-  color: var(--react-autoql-error-color);
   text-align: center;
   border-radius: 4px;
   padding: 6px;
   position: fixed;
+  top: 20px;
   display: block;
   z-index: 999999999;
-  transform: translateX(50%);
+  transform: translateX(85%);
   box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.4);
+
+  span {
+    color: var(--react-autoql-accent-color);
+  }
 }
 
-#condition-selection-error.show {
+#react-autoql-condition-show-message.show {
   visibility: visible;
   // -webkit-animation: snackbarFadein 0.5s, snackbarFadeout 0.5s 2.5s;
-  animation: snackbarFadein 0.5s, snackbarFadeout 0.5s 2s;
+  animation: snackbarFadein 1s, snackbarFadeout 1s 2s;
 }
 
 @keyframes snackbarFadein {
   from {
-    top: 30px;
+    top: 0;
     opacity: 0;
   }
   to {
-    top: 60px;
+    top: 20px;
     opacity: 1;
+  }
+}
+
+@keyframes snackbarFadeout {
+  from {
+    top: 20px;
+    opacity: 1;
+  }
+  to {
+    top: 0;
+    opacity: 0;
   }
 }
