--- a/src/components/ConditionLockMenu/ConditionLockMenu.scss
+++ b/src/components/ConditionLockMenu/ConditionLockMenu.scss
@@ -30,6 +30,10 @@
   padding: 2px 6px 2px 6px;
   margin: 4px 10px 4px 10px;
   display: inline-block;
+  position: absolute;
+  top: 20px;
+  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.4);
+  z-index: 999999;
 
   span {
     color: var(--react-autoql-accent-color);
@@ -279,9 +283,12 @@
   box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.4);
   z-index: 9999;
 
+  span {
+    color: var(--react-autoql-accent-color);
+  }
+
   p {
     margin-bottom: 0 !important;
-
     span {
       color: var(--react-autoql-accent-color);
     }
