fix(filter locking): bugfixes

--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -299,20 +299,16 @@
   background: none !important;
   border: none;
   padding: 0 !important;
-  text-decoration: underline;
+  text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
   color: var(--react-autoql-accent-color);
 
   &:hover {
-    padding: 4px;
-    font-weight: 600;
+    opacity: 0.9;
   }
 }
 .react-autoql-condition-link-filtered {
-  border: 1px solid var(--react-autoql-accent-color) !important;
-  border-radius: 5px;
-  padding: 2px 4px 2px 4px !important;
   text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
@@ -325,11 +321,11 @@
   }
 
   &:hover {
-    padding: 4px;
-    font-weight: 600;
+    opacity: 0.9;
+    border: none !important;
 
     .react-autoql-custom-icon {
-      font-weight: 600;
+      opacity: 0.9;
     }
   }
 }
@@ -341,4 +337,5 @@
   padding: 4px 6px 4px 6px;
   margin: 2px;
   min-height: 26px;
+  min-width: 300px;
 }
