--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -303,7 +303,7 @@
   text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
-  color: var(--react-autoql-accent-color);
+  color: var(--react-autoql-accent-color) !important;
 
   &:hover {
     opacity: 0.9;
@@ -313,7 +313,7 @@
   text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
-  color: var(--react-autoql-accent-color);
+  color: var(--react-autoql-accent-color) !important;
 
   .react-autoql-custom-icon {
     font-size: 14px;
