Show hide translation (#296)
* fix: show message when filter is applied

AC-1625

* fix(filter locking): added max filter list size with scroll

AC-1624

* fix(filter locking): different ui interaction for selecting locked condition from query

AC-1692

* fix: filter items are now scrollable at overflow threshold

AC-1624

Co-authored-by: Ben-CHATA <benwozak@gmail.com>

--- a/src/components/ConditionLockMenu/ConditionLockMenu.scss
+++ b/src/components/ConditionLockMenu/ConditionLockMenu.scss
@@ -1,3 +1,7 @@
+.react-autoql-condition-lock-menu {
+  min-width: 400px !important;
+}
+
 .react-autoql-filter-locking-title-container {
   display: inline-block;
   width: 100%;
@@ -86,29 +90,20 @@
 .react-autoql-condition-table {
   min-width: 95%;
   margin: 10px auto;
+  table-layout: fixed;
 }
 
 .react-autoql-condition-table thead {
   padding-left: 10px;
-}
-
-.react-autoql-condition-table th {
-  text-align: left;
-  padding: 4px;
-  margin: 0 10px 0 10px;
-  font-weight: 800;
-
-  span {
-    color: var(--react-autoql-accent-color);
-    padding: 5px;
-  }
+  display: table-header-group;
+  width: 100%;
+  flex: 1 1 auto;
 }
 
 .react-autoql-condition-table .react-autoql-condition-table-list-item {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 32vw;
 }
 
 .react-autoql-condition-lock-menu-footer {
@@ -147,18 +142,57 @@
   }
 }
 
-.react-autoql-condition-table td {
-  text-align: left;
-  padding: 4px;
-  margin: 0 10px 0 10px;
-  padding-left: 10px;
-}
-
 .react-autoql-condition-list {
   padding: 0;
   margin: 0 auto;
-  overflow-y: scroll;
   min-height: 182px;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+}
+
+.react-autoql-condition-list .react-autoql-condition-table thead {
+  text-align: left;
+  width: 100%;
+  margin: 0 10px 0 10px;
+  font-weight: 800;
+
+  span {
+    color: var(--react-autoql-accent-color);
+    padding: 5px;
+  }
+}
+.react-autoql-condition-list .react-autoql-condition-table tbody {
+  display: block;
+  overflow-y: scroll;
+  max-height: 260px;
+  width: 100%;
+  flex: 1 1 auto;
+  padding-left: 10px;
+}
+
+.react-autoql-condition-list .react-autoql-condition-table tr {
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+}
+
+.react-autoql-condition-list .react-autoql-condition-table th {
+  display: table-cell;
+  padding-left: 10px;
+}
+
+.react-autoql-condition-list td {
+  display: table-cell;
+  width: 100%;
 }
 
 .react-autoql-condition-list-loading-container {
@@ -291,6 +325,16 @@
   }
 }
 
+.react-autoql-highlight-row {
+  background-color: var(--react-autoql-accent-color);
+  color: white;
+  animation-name: highlightIn, highlightOut;
+  animation-duration: 400ms, 400ms;
+  animation-delay: 0ms, 1500ms;
+  animation-timing-function: ease-in, ease-out;
+  animation-iteration-count: 1, 1;
+}
+
 #react-autoql-filter-setting-info-card.show {
   visibility: visible;
   animation: fadeIn 1s;
@@ -320,7 +364,6 @@
 
 #react-autoql-condition-show-message.show {
   visibility: visible;
-  // -webkit-animation: snackbarFadein 0.5s, snackbarFadeout 0.5s 2.5s;
   animation: snackbarFadein 1s, snackbarFadeout 1s 2s;
 }
 
@@ -354,5 +397,26 @@
   to {
     opacity: 1;
     transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes highlightOut {
+  100% {
+    background-color: var(--react-autoql-background-color-primary);
+    color: var(--react-autoql-text-color-primary);
+  }
+  0% {
+    background-color: var(--react-autoql-accent-color);
+    color: white;
+  }
+}
+@keyframes highlightIn {
+  100% {
+    background-color: var(--react-autoql-accent-color);
+    color: white;
+  }
+  0% {
+    background-color: var(--react-autoql-background-color-primary);
+    color: var(--react-autoql-text-color-primary);
   }
 }
