fix(filter locking): fixed delete issue
AC-1709

--- a/src/components/ConditionLockMenu/ConditionLockMenu.scss
+++ b/src/components/ConditionLockMenu/ConditionLockMenu.scss
@@ -104,6 +104,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  width: 60%;
 }
 
 .react-autoql-condition-lock-menu-footer {
@@ -148,12 +149,12 @@
   min-height: 182px;
 }
 
-::-webkit-scrollbar {
+tbody::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
 }
 
-::-webkit-scrollbar-thumb {
+tbody::-webkit-scrollbar-thumb {
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
@@ -192,7 +193,8 @@
 
 .react-autoql-condition-list td {
   display: table-cell;
-  width: 100%;
+  padding: 2px;
+  padding-left: 10px;
 }
 
 .react-autoql-condition-list-loading-container {
