fix(dataalerts): disable user edit Project Alerts feature, delete re-send button for Project Alerts

--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -21,6 +21,9 @@
         margin-right: 10px;
         cursor: pointer;
       }
+      #react-autoql-notification-error-status-icon-PROJECT {
+        margin-right: 10px;
+      }
 
       .reset-period-info-icon {
         padding-right: 20px;
