--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -1,7 +1,7 @@
 // required for reverse translation
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
-.react-autoql-response-content-container:not(.html-content) {
+.react-autoql-response-content-container {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -13,60 +13,6 @@
   width: 100%;
   overflow: hidden;
   color: var(--react-autoql-text-color-primary);
-}
-
-.react-autoql-response-content-container.html-content {
-  position: relative;
-  background-color: inherit;
-  text-align: left;
-  font-size: 14px;
-  height: 95%;
-  width: 100%;
-  overflow: hidden;
-  color: var(--react-autoql-text-color-primary);
-
-  table {
-    th {
-      border-bottom: 2px solid var(--react-autoql-border-color);
-    }
-    tr:not(:last-child) {
-      border-bottom: 1px solid var(--react-autoql-border-color);
-    }
-    td:not(:last-child) {
-      border-right: 1px solid var(--react-autoql-border-color);
-    }
-    th,
-    td {
-      padding: 5px 10px;
-    }
-  }
-
-  * {
-    font-size: inherit;
-  }
-
-  sup,
-  sub {
-    font-size: 10px;
-  }
-
-  > *:first-child {
-    margin-top: 0 !important;
-  }
-
-  > *:last-child {
-    margin-bottom: 0 !important;
-  }
-
-  caption {
-    display: table-caption;
-    text-align: -webkit-center;
-    padding-top: unset;
-    padding-bottom: unset;
-    color: unset;
-    text-align: unset;
-    caption-side: unset;
-  }
 }
 
 .react-autoql-response-content-container.table {
@@ -145,12 +91,6 @@
   font-size: inherit;
 }
 .no-columns-error-message {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
   text-align: center;
   padding: 20px;
   font-size: 13px;
