refactor: encapsulate filter functions inside ChataTable

--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -1,6 +1,7 @@
 .chat-single-message-container {
   transition: background-color 0.2s ease;
   padding-top: 6px;
+  max-height: 85%;
 
   &:first-of-type {
     margin-top: 10px;
