--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -340,3 +340,12 @@
   min-height: 26px;
   min-width: 300px;
 }
+
+.report-like-text-button {
+  background: none !important;
+  border: none;
+  padding: 0 !important;
+  color: #26a7df;
+  text-decoration: underline;
+  cursor: pointer;
+}
