--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -1,6 +1,7 @@
 .react-autoql-table-container {
   height: 100%;
   max-width: 100%;
+  min-height: 125px;
   background-color: inherit;
 }
 
@@ -44,13 +45,51 @@
   border-bottom: 1px solid var(--react-autoql-border-color);
 }
 .tabulator-cell:not(:first-child) {
-  // .tabulator-col:not(:first-child) {
   border-left: 1px solid !important;
   border-color: rgba(0, 0, 0, 0.06) !important;
 }
 .react-autoql-table .tabulator-tableHolder {
   background-color: inherit;
 }
+
+.react-autoql-table-container.resizing {
+  width: 100vw;
+  .react-autoql-table {
+    display: none;
+  }
+}
+
+.react-autoql-table-container.filtering {
+  .filter-tag {
+    display: none;
+  }
+  .react-autoql-table .tabulator-col {
+    height: 72px !important;
+  }
+  .react-autoql-table .tabulator-header-filter {
+    display: inline;
+  }
+  .react-autoql-table .tabulator-tableHolder {
+    min-height: calc(100% - 74px) !important;
+    height: calc(100% - 74px) !important;
+    max-height: calc(100% - 74px) !important;
+  }
+}
+
+.react-autoql-table-container:not(.filtering) {
+  .react-autoql-table .tabulator-col {
+    height: auto !important;
+  }
+  .react-autoql-table .tabulator-header-filter {
+    display: none;
+  }
+  .react-autoql-table .tabulator-tableHolder {
+    min-height: calc(100% - 40px) !important;
+    height: calc(100% - 40px) !important;
+    max-height: calc(100% - 40px) !important;
+  }
+}
+
 .react-autoql-table.tabulator
   .tabulator-header
   .tabulator-col
@@ -121,19 +160,6 @@
 }
 .react-autoql-table .tabulator-header-filter input:focus {
   border: 1px solid #28a8e0;
-}
-/* These are necessary because we are always rendering the
-filter (just display: none when not used) instead of re-rendering
-the whole table when the filter button is clicked */
-.react-autoql-table-container:not(.filtering)
-  .react-autoql-table
-  .tabulator-header-filter {
-  display: none;
-}
-.react-autoql-table-container:not(.filtering)
-  .react-autoql-table
-  .tabulator-col {
-  height: auto !important;
 }
 .tabulator-table .tabulator-row .tabulator-cell {
   min-height: 38px;
